--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: My Website
+title: Doeun 의 딥러닝 블로그
 
 # Your name to show in the footer
-author: Some Person
+author: Do-eun Kim
 
 ###############################################
 # --- List of links in the navigation bar --- #
